Add backend Activity handling
